:green_heart: Fixed CI pipeline

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -23,4 +23,4 @@ jobs:
                 export GCLOUD_DOCKER_REPO_NAME=${{ secrets.GCLOUD_DOCKER_REPO_NAME }}
                 export SERVICE_IMAGE_NAME=google-sheets
                 export TAG_NAME=1.0.$BUILD_NUMBER
-                bash scripts/build-push-docker.sh $SERVER_IMAGE_NAME $TAG_NAME
+                bash scripts/build-push-docker.sh $SERVER_IMAGE_NAME 
