--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -24,4 +24,4 @@ jobs:
                 export SERVICE_IMAGE_NAME=google-sheets
                 export TAG_NAME=1.0.$BUILD_NUMBER
                 export GCLOUD_DOCKER_REGISTRY_HOSTNAME=${{ secrets.GCLOUD_DOCKER_REGISTRY_HOSTNAME }}
-                bash scripts/build-push-docker.sh $SERVER_IMAGE_NAME 
+                bash scripts/build-push-docker.sh $SERVICE_IMAGE_NAME 
