--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -41,7 +41,7 @@ jobs:
                 
             - name: Gcloud authentication
               run: |
-                export GCLOUD_ENCODED_API_KEY=${{ secrets.GCLOUD_ENCODED_DEV_API_KEY }}
-                export GCLOUD_PROJECT_SERVICE_ACCOUNT_ID=${{  secrets.GCLOUD_DEV_SERVICE_ACCOUNT_ID }}
-                export GCLOUD_PROJECT_ID=${{ secrets.GCLOUD_DEV_PROJECT_ID }}
+                export GCLOUD_ENCODED_API_KEY=${{ env.GCLOUD_ENCODED_DEV_API_KEY }}
+                export GCLOUD_PROJECT_SERVICE_ACCOUNT_ID=${{  env.GCLOUD_DEV_SERVICE_ACCOUNT_ID }}
+                export GCLOUD_PROJECT_ID=${{ env.GCLOUD_DEV_PROJECT_ID }}
                 bash scripts/gcloud-auth-login.sh
