--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -41,9 +41,9 @@ jobs:
                 
             - name: Gcloud authentication
               env: 
-                GCLOUD_ENCODED_API_KEY: ${{ env.GCLOUD_ENCODED_DEV_API_KEY }}
-                GCLOUD_PROJECT_SERVICE_ACCOUNT_ID: ${{  env.GCLOUD_DEV_SERVICE_ACCOUNT_ID }}
-                GCLOUD_PROJECT_ID: ${{ env.GCLOUD_DEV_PROJECT_ID }} 
+                GCLOUD_ENCODED_API_KEY: ${{ secrets.GCLOUD_ENCODED_DEV_API_KEY }}
+                GCLOUD_PROJECT_SERVICE_ACCOUNT_ID: ${{  secrets.GCLOUD_DEV_SERVICE_ACCOUNT_ID }}
+                GCLOUD_PROJECT_ID: ${{ secrets.GCLOUD_DEV_PROJECT_ID }} 
 
               run: |
                 #export GCLOUD_ENCODED_API_KEY=${{ env.GCLOUD_ENCODED_DEV_API_KEY }}
